# splash-cli-utils

./: Cargo.toml  Makefile  README.md  install.sh
mkdev/: Cargo.toml
mkdev/src/: main.rs
signals/: Cargo.toml
signals/src/: main.rs
