[workspace]
resolver = "2"
members = ["mkdev", "signals"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MVDW-Java"]
license = "GPL-3.0"
repository = "https://github.com/MVDW-SplashOS/splash-cli-utils/"
homepage = "https://splashos.com"
description = "Alternative CLI utilities collection"
keywords = ["cli", "utilities", "tools", "system"]
categories = ["command-line-utilities"]

[workspace.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[workspace.metadata.commands]
build-all = "cargo build --workspace"
test-all = "cargo test --workspace"
check-all = "cargo check --workspace"
clippy-all = "cargo clippy --workspace -- -D warnings"
fmt-all = "cargo fmt --all"
