[package]
name = "mkdev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A disk image writing utility with progress tracking and auto-optimization"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "mkdev"
path = "src/main.rs"

[dependencies]
libc.workspace = true
