[package]
name = "sig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A signal sending utility for processes by PID or name"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sig"
path = "src/main.rs"

[dependencies]
libc.workspace = true
